Corrected collector start-up instruction in README.